--- a/package.json
+++ b/package.json
@@ -9,15 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.81.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@supabase/supabase-js": "^2.81.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
